# aws-monitoring-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: mod.rs
src/datapipelines/: README.md  bitbar.rs  main.rs  mod.rs  properties.rs
src/datapipelines/models/: mod.rs  pipeline_execution_status.rs  pipeline_health_visibility.rs  pipeline_stats.rs  pipelines_report.rs
tests/datapipelines/: properties-test-not-real.json  properties-test.json  properties-test2.json
